# sxh-soloCoder-1179

./: README.md  pyproject.toml
template_gen/: __init__.py  __main__.py  audit.py  cli.py  config.py  engine.py  interactive.py  manifest.py  post_gen.py  preset.py  updater.py  validate_cmd.py  validator.py
template_gen/templates/cli_tool/: projgen.yaml
template_gen/templates/cli_tool/template/: README.md.jinja2  pyproject.toml.jinja2  requirements.txt.jinja2
template_gen/templates/cli_tool/template/tests/: test_cli.py.jinja2
template_gen/templates/cli_tool/template/{{ project_name }}/: __init__.py  cli.py.jinja2  config.py.jinja2  logging_config.py.jinja2
template_gen/templates/fastapi/: projgen.yaml
template_gen/templates/fastapi/template/: Dockerfile.jinja2  README.md.jinja2  docker-compose.yml.jinja2  requirements.txt.jinja2
template_gen/templates/fastapi/template/app/: database.py.jinja2  main.py.jinja2  models.py.jinja2
template_gen/templates/fastapi/template/tests/: test_main.py.jinja2
